<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organizacion_de_vistas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="100dp"
        android:textSize="40dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/gray">

        <Button
            android:id="@+id/btnTable"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginRight="20dp"
            android:text="@string/txttable"
            android:background="@color/brick"/>
        <Button
            android:id="@+id/btnRel"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:text="@string/txtRel"
            android:background="@color/brick"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:src="@drawable/sadmster"
        />
    </LinearLayout>